# rust-mini

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
examples/: input-matrix.rs  probability.rs  sum-1.rs  sum-matrix.rs
src/: entry.asm  lib.rs  main.rs  sbi.rs
tests/sql_migrations/: V1__initial.sql  V2__add_cars_table.sql  V3__add_brand_to_cars_table.rs
