[package]
name = "rust-mini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
# logging
# SQL
postgres-types = { version = "*", features = ["derive"] }
tokio-postgres = { version = "*", features = [
  "with-serde_json-1",
  "with-time-0_3"
] }
deadpool-postgres = { version = "0.10" }
cornucopia_async = { version = "0.4", features = ["with-serde_json-1"] }
peroxide = "0.33.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
time = "0.3"
futures = "0.3"

[build-dependencies]
cornucopia = { version = "0.9" }
postgres = "0.19.5"
