[package]
name = "rust-mini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.6.16", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["raw_value"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["trace", "fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
